# ShadowSight

./: .gitignore  .pdm-python  README.md  main.py  pyproject.toml  tcrawl.py
config/: __init__.py
core/: async.py  asyncf.py  sync.py  syncf.py
core/i2p/: utils.py
core/tor/: __init__.py  utils.py
